[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/cactus.gd" type="Script" id=1]
[ext_resource path="res://assets/plants/cactus_3.png" type="Texture" id=2]
[ext_resource path="res://assets/plants/cactus_2.png" type="Texture" id=3]
[ext_resource path="res://assets/plants/cactus_1.png" type="Texture" id=4]
[ext_resource path="res://assets/plants/cactus_4.png" type="Texture" id=5]
[ext_resource path="res://assets/plants/cactus_5.png" type="Texture" id=6]
[ext_resource path="res://assets/plants/cactus_6.png" type="Texture" id=7]
[ext_resource path="res://scripts/spike_generator.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="cactus" type="Node2D"]
z_index = 4
script = ExtResource( 1 )

[node name="cactus_sprite" type="Sprite" parent="."]
centered = false

[node name="cactus_attack_anim" type="AnimatedSprite" parent="cactus_sprite"]
frames = SubResource( 1 )
speed_scale = 2.0
centered = false

[node name="spike_generator" type="Position2D" parent="."]
script = ExtResource( 8 )

[node name="attack_timer" type="Timer" parent="spike_generator"]
wait_time = 2.0
autostart = true
[connection signal="animation_finished" from="cactus_sprite/cactus_attack_anim" to="." method="_on_cactus_attack_anim_animation_finished"]
[connection signal="timeout" from="spike_generator/attack_timer" to="." method="_on_attack_timer_timeout"]
